# codex-SpiroSerach

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  reasonix.toml
.githooks/: pre-commit
data/: local_paper_trace_excerpt.txt  model_provider_registry.json  perovskite_workflow_templates.json  seed_candidates.json  source_registry.json
docs/: acceptance-tests.md  agent-collaboration-governance.md  ai-collaboration-instruction-templates.md  architecture.md  database-schema.md  frontend-artifact-viewer-fixtures.md  material-taxonomy.md  mcp-resources.md  open-trusted-datasets-for-psc-htl.md  project-hooks.md  v11-readonly-api-mcp.md  v12-data-and-algorithm-interfaces.md  v13-data-closure-and-real-baseline.md  v20-run-evolution-closure.md  v21-identity-closure.md  v22-scientific-validation-closure.md  v26-quality-hardening-closure.md  v27-production-activation-closure.md  v28-incident-checklist.md  v28-local-readiness-runbook.md  v33c-htl-workbench-run-archive.md
frontend/atomreasonx/src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
frontend/atomreasonx/src-tauri/icons/: README.md  icon.icns
frontend/atomreasonx/src-tauri/src/: main.rs
plans/: agent-governance-v18-execution-plan.md  research-public-perovskite-data-sources-2026-07-16.md  v10-loop-driven-productionization-and-visualization-plan.md  v10-loop-state.md  v11-lightweight-productionization-and-repository-plan.md  v11-loop-spec.md  v11-loop-state.md  v12-ai-perovskite-algorithm-and-data-implementation-plan.md  v12-loop-state.md  v13-loop-state.md  (+62 more)
(+561 files in other folders)
