[project]
name = "spirosearch"
version = "0.1.0"
description = "Industrial-grade closed-loop screening baseline for Spiro-OMeTAD replacement HTL candidates."
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.18",
    "referencing>=0.30",
]

[project.optional-dependencies]
ml = [
    "numpy>=2.0",
    "scikit-learn>=1.5",
]
bo = [
    "torch>=2.5",
    "gpytorch>=1.14",
    "botorch>=0.15",
]
